GatewayApi/k8sFiles/GatewayApi/istio/GatewayApi_VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-api-vs
spec:
  hosts:
  - mygatewayapi-service
  http:
    - route:
      - destination:
          host: mygatewayapi-service
          subset: v1
        weight: 75
      - destination:
            host: mygatewayapi-service
            subset: v2
        weight: 25
